made changes to LinkedFile for Paths.get() method